# dark-pattern-detective

./: .gitignore  CONTRIBUTING.md  README.md  cli.py  conftest.py  pyproject.toml  pytest.ini
agent/: orchestrator.py  prompts.py
agent/tools/: extractor.py  memory.py  navigator.py  scraper.py  screenshot.py
config/: loader.py  patterns.yaml  settings.yaml
dark_pattern_detective.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
llm/: analyst.py
report/: formatter.py
tests/: test_analyst.py  test_extractor.py  test_formatter.py  test_memory.py  test_navigator.py  test_orchestrator.py  test_scraper.py  test_screenshot.py
